--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,3 +42,7 @@
     </div>
   </div>
 </ion-content>
+
+<div *ngIf="isLoading" class="spinner-overlay">
+  <ion-spinner name="bubbles" ></ion-spinner>
+</div>
