--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -133,3 +133,11 @@ ion-button {
     transform: scale(1);
   }
 }
+
+
+.quick-access ion-button {
+  --border-color: transparent;
+  --color: white;
+  --background: #00cc66;
+  --background-hover: #00b359;
+}
