--- a/src/global.scss
+++ b/src/global.scss
@@ -69,3 +69,29 @@ ion-loading.custom-spinner-class .loading-wrapper {
   align-items: center;
   flex-direction: column;
 }
+
+
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4); // Fondo semitransparente
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; // Asegura que esté encima de todo
+  --color: #36B94F;
+}
+
+.spinner-overlay ion-spinner {
+  width: 50px;
+  height: 50px;
+}
+
+
+ion-back-button {
+  color: white;
+  margin-right: 16px; // o el valor que necesites
+}
