--- a/src/app/graficos-lindas/graficos-lindas.page.scss
+++ b/src/app/graficos-lindas/graficos-lindas.page.scss
@@ -1,5 +1,5 @@
 .content-background {
-    --background: #36B94F;
+    --background:#2e8b57;
     display: flex;
     flex-direction: column;
     justify-content: center;
