--- a/src/app/main/main.page.scss
+++ b/src/app/main/main.page.scss
@@ -5,7 +5,7 @@
   }
 
   .content-background {
-    --background: #36B94F; // Verde como en otras pantallas
+    --background: #2e8b57; // Verde como en otras pantallas
     display: flex;
     flex-direction: column;
     padding: 16px;
