--- a/src/app/cosas-lindas/cosas-lindas.page.html
+++ b/src/app/cosas-lindas/cosas-lindas.page.html
@@ -9,43 +9,53 @@
 
 <ion-content class="ion-padding content-background">
 
-<ion-grid>
-  <ion-row>
-    <ion-col size="6" *ngFor="let imageInfo of imageInfos">
-      <div class="image-container">
-        <img [src]="imageInfo.url" [ngClass]="{ 'voted': votedUrls.includes(imageInfo.url) }" (click)="voteForImage(imageInfo.url)" />
-        <div class="image-info">
-          <div class="email">{{ imageInfo.email }}</div>
-          <div class="date">{{ imageInfo.date | date: 'medium' }}</div>
+  <ion-grid *ngIf="imageInfos.length > 0; else noImages">
+    <ion-row>
+      <ion-col size="12" *ngFor="let imageInfo of imageInfos">
+        <div class="image-container">
+          <img [src]="imageInfo.url" [ngClass]="{ 'voted': votedUrls.includes(imageInfo.url) }"
+            (click)="voteForImage(imageInfo.url)" />
+          <div class="image-info">
+            <div class="email">{{ imageInfo.email }}</div>
+            <div class="date">{{ imageInfo.date | date: 'medium' }}</div>
+          </div>
         </div>
-      </div>
-    </ion-col>
-  </ion-row>
-</ion-grid>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end" style="z-index: 999;">
-    <ion-fab-button class="fab-button">
-      <ion-icon name="add-outline" class="fab-icon"></ion-icon>
-    </ion-fab-button>
+  <!-- Template alternativo -->
+  <ng-template #noImages>
+    <div class="no-images-message">
+      No hay fotos disponibles.
+    </div>
+  </ng-template>
 
-    <ion-fab-list side="top">
-      <ion-fab-button class="fab-button" (click)="this.openCamera()">
-        <ion-icon name="camera-outline" class="fab-icon"></ion-icon>
+  <ion-footer>
+    <ion-fab vertical="bottom" horizontal="end" class="fixed-fab">
+      <ion-fab-button class="fab-button">
+        <ion-icon name="add-outline" class="fab-icon"></ion-icon>
       </ion-fab-button>
 
-      <ion-fab-button class="fab-button" (click)="this.openGallery()">
-        <ion-icon name="image-outline" class="fab-icon"></ion-icon>
-      </ion-fab-button>
+      <ion-fab-list side="top">
+        <ion-fab-button class="fab-button" (click)="openCamera()">
+          <ion-icon name="camera-outline" class="fab-icon"></ion-icon>
+        </ion-fab-button>
 
-      <ion-fab-button class="fab-button" (click)="this.goToCharts()">
-        <ion-icon name="pie-chart-outline" class="fab-icon"></ion-icon>
-      </ion-fab-button>
+        <ion-fab-button class="fab-button" (click)="openGallery()">
+          <ion-icon name="image-outline" class="fab-icon"></ion-icon>
+        </ion-fab-button>
 
-      <ion-fab-button class="fab-button" (click)="this.goToUserGallery()">
-        <ion-icon name="albums-outline" class="fab-icon"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
+        <ion-fab-button class="fab-button" (click)="goToCharts()">
+          <ion-icon name="pie-chart-outline" class="fab-icon"></ion-icon>
+        </ion-fab-button>
+
+        <ion-fab-button class="fab-button" (click)="goToUserGallery()">
+          <ion-icon name="albums-outline" class="fab-icon"></ion-icon>
+        </ion-fab-button>
+      </ion-fab-list>
+    </ion-fab>
+  </ion-footer>
 
 </ion-content>
 
