--- a/src/app/cosas-lindas/cosas-lindas.page.scss
+++ b/src/app/cosas-lindas/cosas-lindas.page.scss
@@ -56,7 +56,7 @@
 
 
 .content-background {
-  --background: #36b94f;
+  --background: #2e8b57;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,14 +79,6 @@
   transform: scale(1.08);
 }
 
-.fab-button {
-  --background: white;
-  --color: #6fc530;
-}
-
-.fab-icon {
-  color: #6fc530;
-}
 
 
 .image-container {
