--- a/src/app/mi-galeria/mi-galeria.page.scss
+++ b/src/app/mi-galeria/mi-galeria.page.scss
@@ -14,7 +14,7 @@ ion-slide {
   
 
   .content-background {
-    --background: #36B94F;
+    --background: #2e8b57;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,3 +22,30 @@ ion-slide {
 }
 
   
+.image-container {
+  position: relative;
+  cursor: pointer;
+
+  img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 8px;
+  }
+
+  .image-info {
+    position: absolute;
+    bottom: 10px;       /* Ponelo cerca del borde inferior o donde prefieras */
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+    padding: 4px 8px;
+    border-radius: 8px;
+    width: auto;
+    max-width: 90%;
+    font-size: 0.9rem;
+    pointer-events: none;
+  }
+}
